--- a/CU_DPU_test2_io/CU_DPU.runs/impl_1/usage_statistics_webtalk.html
+++ b/CU_DPU_test2_io/CU_DPU.runs/impl_1/usage_statistics_webtalk.html
@@ -4,11 +4,11 @@
   <TR ALIGN='CENTER' BGCOLOR='#A7BFDE'><TD COLSPAN='4'><B>software_version_and_target_device</B></TD></TR>
 <TR ALIGN='LEFT'>  <TD BGCOLOR='#DBE5F1'><B>beta</B></TD><TD>FALSE</TD>
   <TD BGCOLOR='#DBE5F1'><B>build_version</B></TD><TD>2288692</TD>
-</TR><TR ALIGN='LEFT'>  <TD BGCOLOR='#DBE5F1'><B>date_generated</B></TD><TD>Mon May 13 20:16:23 2019</TD>
+</TR><TR ALIGN='LEFT'>  <TD BGCOLOR='#DBE5F1'><B>date_generated</B></TD><TD>Mon May 13 23:12:49 2019</TD>
   <TD BGCOLOR='#DBE5F1'><B>os_platform</B></TD><TD>WIN64</TD>
 </TR><TR ALIGN='LEFT'>  <TD BGCOLOR='#DBE5F1'><B>product_version</B></TD><TD>Vivado v2018.2.1 (64-bit)</TD>
   <TD BGCOLOR='#DBE5F1'><B>project_id</B></TD><TD>22f1f50bc018488896c371ccba462f89</TD>
-</TR><TR ALIGN='LEFT'>  <TD BGCOLOR='#DBE5F1'><B>project_iteration</B></TD><TD>1</TD>
+</TR><TR ALIGN='LEFT'>  <TD BGCOLOR='#DBE5F1'><B>project_iteration</B></TD><TD>3</TD>
   <TD BGCOLOR='#DBE5F1'><B>random_id</B></TD><TD>1f50d6dc19e85a2ea68a17a3db02a7a7</TD>
 </TR><TR ALIGN='LEFT'>  <TD BGCOLOR='#DBE5F1'><B>registration_id</B></TD><TD>1f50d6dc19e85a2ea68a17a3db02a7a7</TD>
   <TD BGCOLOR='#DBE5F1'><B>route_design</B></TD><TD>TRUE</TD>
@@ -34,7 +34,7 @@
 <TR ALIGN='LEFT'>   <TD>addsrcwizard_specify_hdl_netlist_block_design=1</TD>
    <TD>addsrcwizard_specify_simulation_specific_hdl_files=2</TD>
    <TD>basedialog_cancel=10</TD>
-   <TD>basedialog_ok=203</TD>
+   <TD>basedialog_ok=216</TD>
 </TR><TR ALIGN='LEFT'>   <TD>basedialog_yes=1</TD>
    <TD>baseworkspace_float=9</TD>
    <TD>boardchooser_board_table=2</TD>
@@ -44,11 +44,11 @@
    <TD>constraintschooserpanel_add_files=1</TD>
    <TD>createsrcfiledialog_file_name=21</TD>
 </TR><TR ALIGN='LEFT'>   <TD>expreporttreepanel_exp_report_tree_table=2</TD>
-   <TD>filesetpanel_file_set_panel_tree=479</TD>
+   <TD>filesetpanel_file_set_panel_tree=492</TD>
    <TD>filesetpanel_messages=1</TD>
    <TD>findinfilesview_root=4</TD>
 </TR><TR ALIGN='LEFT'>   <TD>floatingtopdialog_ignore_and_continue_with_invalid_top=1</TD>
-   <TD>flownavigatortreepanel_flow_navigator_tree=201</TD>
+   <TD>flownavigatortreepanel_flow_navigator_tree=210</TD>
    <TD>gettingstartedview_create_new_project=1</TD>
    <TD>graphicalview_zoom_in=30</TD>
 </TR><TR ALIGN='LEFT'>   <TD>graphicalview_zoom_out=132</TD>
@@ -79,73 +79,81 @@
    <TD>openfileaction_open_directory=2</TD>
    <TD>pacodeeditor_find_usages=2</TD>
    <TD>pacodeeditor_goto_definition=2</TD>
-</TR><TR ALIGN='LEFT'>   <TD>pacommandnames_auto_update_hier=9</TD>
-   <TD>pacommandnames_run_bitgen=2</TD>
+</TR><TR ALIGN='LEFT'>   <TD>pacommandnames_auto_connect_target=2</TD>
+   <TD>pacommandnames_auto_update_hier=9</TD>
+   <TD>pacommandnames_run_bitgen=4</TD>
    <TD>pacommandnames_set_as_top=9</TD>
-   <TD>pacommandnames_simulation_live_restart=71</TD>
-</TR><TR ALIGN='LEFT'>   <TD>pacommandnames_simulation_live_run=776</TD>
+</TR><TR ALIGN='LEFT'>   <TD>pacommandnames_simulation_live_restart=71</TD>
+   <TD>pacommandnames_simulation_live_run=776</TD>
    <TD>pacommandnames_simulation_live_run_all=5</TD>
    <TD>pacommandnames_simulation_live_step=4</TD>
-   <TD>pacommandnames_simulation_run_behavioral=53</TD>
-</TR><TR ALIGN='LEFT'>   <TD>paviews_code=85</TD>
-   <TD>paviews_project_summary=20</TD>
+</TR><TR ALIGN='LEFT'>   <TD>pacommandnames_simulation_run_behavioral=53</TD>
+   <TD>paviews_code=87</TD>
+   <TD>paviews_project_summary=21</TD>
    <TD>paviews_schematic=15</TD>
+</TR><TR ALIGN='LEFT'>   <TD>programdebugtab_program_device=1</TD>
+   <TD>programfpgadialog_program=2</TD>
    <TD>projectnamechooser_choose_project_location=1</TD>
-</TR><TR ALIGN='LEFT'>   <TD>projectnamechooser_project_name=1</TD>
-   <TD>projecttab_reload=11</TD>
+   <TD>projectnamechooser_project_name=1</TD>
+</TR><TR ALIGN='LEFT'>   <TD>projecttab_reload=11</TD>
    <TD>rdicommands_delete=15</TD>
    <TD>rdicommands_properties=1</TD>
-</TR><TR ALIGN='LEFT'>   <TD>rdicommands_waveform_save_configuration=1</TD>
-   <TD>rdiviews_waveform_viewer=252</TD>
+   <TD>rdicommands_waveform_save_configuration=1</TD>
+</TR><TR ALIGN='LEFT'>   <TD>rdiviews_waveform_viewer=252</TD>
    <TD>removesourcesdialog_also_delete=9</TD>
    <TD>saveprojectutils_save=3</TD>
-</TR><TR ALIGN='LEFT'>   <TD>schmenuandmouse_expand_cone=1</TD>
-   <TD>searchcommandcomponent_quick_access=3</TD>
+   <TD>schmenuandmouse_expand_cone=1</TD>
+</TR><TR ALIGN='LEFT'>   <TD>searchcommandcomponent_quick_access=3</TD>
    <TD>simulationforcesettingsdialog_force_value=15</TD>
    <TD>simulationframespanel_simulation_frame_table=1</TD>
-</TR><TR ALIGN='LEFT'>   <TD>simulationliverunforcomp_specify_time_and_units=11</TD>
-   <TD>simulationlocalspanel_simulate_locals_table=1</TD>
+   <TD>simulationliverunforcomp_specify_time_and_units=11</TD>
+</TR><TR ALIGN='LEFT'>   <TD>simulationlocalspanel_simulate_locals_table=1</TD>
    <TD>simulationobjectspanel_simulation_objects_tree_table=167</TD>
    <TD>simulationscopespanel_simulate_scope_table=366</TD>
-</TR><TR ALIGN='LEFT'>   <TD>simulationstackspanel_simulation_stack_table=4</TD>
-   <TD>srcchooserpanel_add_hdl_and_netlist_files_to_your_project=15</TD>
+   <TD>simulationstackspanel_simulation_stack_table=4</TD>
+</TR><TR ALIGN='LEFT'>   <TD>srcchooserpanel_add_hdl_and_netlist_files_to_your_project=15</TD>
    <TD>srcchooserpanel_create_file=21</TD>
    <TD>srcmenu_ip_hierarchy=9</TD>
-</TR><TR ALIGN='LEFT'>   <TD>syntheticagettingstartedview_recent_projects=1</TD>
-   <TD>syntheticastatemonitor_cancel=1</TD>
-   <TD>taskbanner_close=50</TD>
+   <TD>syntheticagettingstartedview_recent_projects=1</TD>
+</TR><TR ALIGN='LEFT'>   <TD>syntheticastatemonitor_cancel=1</TD>
+   <TD>taskbanner_close=51</TD>
    <TD>tclconsoleview_tcl_console_code_editor=43</TD>
-</TR><TR ALIGN='LEFT'>   <TD>waveformnametree_waveform_name_tree=31</TD>
-   <TD>waveformview_goto_last_time=4</TD>
+   <TD>waveformnametree_waveform_name_tree=31</TD>
+</TR><TR ALIGN='LEFT'>   <TD>waveformview_goto_last_time=4</TD>
    <TD>waveformview_goto_time_0=2</TD>
 </TR>  </TABLE>
   <TABLE BORDER='1' CELLSPACING='0' WIDTH='100%'>
    <TR ALIGN='CENTER' BGCOLOR='#DBE5F1'><TD COLSPAN='4'><B>java_command_handlers</B></TD></TR>
 <TR ALIGN='LEFT'>   <TD>addsources=33</TD>
+   <TD>autoconnecttarget=2</TD>
    <TD>closeproject=2</TD>
    <TD>editdelete=15</TD>
+</TR><TR ALIGN='LEFT'>   <TD>launchprogramfpga=2</TD>
    <TD>newproject=1</TD>
-</TR><TR ALIGN='LEFT'>   <TD>runbitgen=2</TD>
-   <TD>runimplementation=3</TD>
+   <TD>openhardwaremanager=3</TD>
+   <TD>openrecenttarget=2</TD>
+</TR><TR ALIGN='LEFT'>   <TD>programdevice=1</TD>
+   <TD>runbitgen=4</TD>
+   <TD>runimplementation=5</TD>
    <TD>runschematic=6</TD>
-   <TD>runsynthesis=41</TD>
-</TR><TR ALIGN='LEFT'>   <TD>savefileproxyhandler=3</TD>
+</TR><TR ALIGN='LEFT'>   <TD>runsynthesis=43</TD>
+   <TD>savefileproxyhandler=3</TD>
    <TD>settopnode=9</TD>
    <TD>showview=26</TD>
-   <TD>simulationrestart=70</TD>
-</TR><TR ALIGN='LEFT'>   <TD>simulationrun=53</TD>
+</TR><TR ALIGN='LEFT'>   <TD>simulationrestart=70</TD>
+   <TD>simulationrun=53</TD>
    <TD>simulationrunall=5</TD>
    <TD>simulationrunfortime=682</TD>
-   <TD>simulationstep=6</TD>
-</TR><TR ALIGN='LEFT'>   <TD>toolssettings=1</TD>
+</TR><TR ALIGN='LEFT'>   <TD>simulationstep=6</TD>
+   <TD>toolssettings=1</TD>
    <TD>toolstemplates=1</TD>
    <TD>viewlayoutcmd=2</TD>
-   <TD>viewtaskrtlanalysis=21</TD>
-</TR><TR ALIGN='LEFT'>   <TD>waveformsaveconfiguration=6</TD>
+</TR><TR ALIGN='LEFT'>   <TD>viewtaskrtlanalysis=21</TD>
+   <TD>waveformsaveconfiguration=6</TD>
 </TR>  </TABLE>
 </TR><TR ALIGN='LEFT'>  <TABLE BORDER='1' CELLSPACING='0' WIDTH='100%'>
    <TR ALIGN='CENTER' BGCOLOR='#DBE5F1'><TD COLSPAN='4'><B>other_data</B></TD></TR>
-<TR ALIGN='LEFT'>   <TD>guimode=19</TD>
+<TR ALIGN='LEFT'>   <TD>guimode=20</TD>
 </TR>  </TABLE>
   <TABLE BORDER='1' CELLSPACING='0' WIDTH='100%'>
    <TR ALIGN='CENTER' BGCOLOR='#DBE5F1'><TD COLSPAN='4'><B>project_data</B></TD></TR>
@@ -189,8 +197,8 @@
     <TD>dsp48e1=3</TD>
     <TD>fdce=7</TD>
 </TR><TR ALIGN='LEFT'>    <TD>fdre=28</TD>
-    <TD>gnd=7</TD>
-    <TD>ibuf=2</TD>
+    <TD>gnd=8</TD>
+    <TD>ibuf=6</TD>
     <TD>ldce=64</TD>
 </TR><TR ALIGN='LEFT'>    <TD>lut1=3</TD>
     <TD>lut2=79</TD>
@@ -198,9 +206,10 @@
     <TD>lut4=59</TD>
 </TR><TR ALIGN='LEFT'>    <TD>lut5=54</TD>
     <TD>lut6=245</TD>
-    <TD>obuf=20</TD>
-    <TD>ramd32=96</TD>
-</TR><TR ALIGN='LEFT'>    <TD>rams32=96</TD>
+    <TD>obuf=24</TD>
+    <TD>obuft=8</TD>
+</TR><TR ALIGN='LEFT'>    <TD>ramd32=96</TD>
+    <TD>rams32=96</TD>
     <TD>vcc=6</TD>
 </TR>   </TABLE>
    </TD></TR>
@@ -212,8 +221,8 @@
     <TD>dsp48e1=3</TD>
     <TD>fdce=7</TD>
 </TR><TR ALIGN='LEFT'>    <TD>fdre=28</TD>
-    <TD>gnd=7</TD>
-    <TD>ibuf=2</TD>
+    <TD>gnd=8</TD>
+    <TD>ibuf=6</TD>
     <TD>ldce=64</TD>
 </TR><TR ALIGN='LEFT'>    <TD>lut1=3</TD>
     <TD>lut2=79</TD>
@@ -221,9 +230,10 @@
     <TD>lut4=59</TD>
 </TR><TR ALIGN='LEFT'>    <TD>lut5=54</TD>
     <TD>lut6=245</TD>
-    <TD>obuf=20</TD>
-    <TD>ram32m=16</TD>
-</TR><TR ALIGN='LEFT'>    <TD>ram32x1s=64</TD>
+    <TD>obuf=24</TD>
+    <TD>obuft=8</TD>
+</TR><TR ALIGN='LEFT'>    <TD>ram32m=16</TD>
+    <TD>ram32x1s=64</TD>
     <TD>vcc=6</TD>
 </TR>   </TABLE>
    </TD></TR>
@@ -377,7 +387,7 @@
 </TR><TR ALIGN='LEFT'>    <TD>fdre_functional_category=Flop &amp; Latch</TD>
     <TD>fdre_used=28</TD>
     <TD>ibuf_functional_category=IO</TD>
-    <TD>ibuf_used=2</TD>
+    <TD>ibuf_used=6</TD>
 </TR><TR ALIGN='LEFT'>    <TD>ldce_functional_category=Flop &amp; Latch</TD>
     <TD>ldce_used=64</TD>
     <TD>lut1_functional_category=LUT</TD>
@@ -393,10 +403,12 @@
 </TR><TR ALIGN='LEFT'>    <TD>lut6_functional_category=LUT</TD>
     <TD>lut6_used=245</TD>
     <TD>obuf_functional_category=IO</TD>
-    <TD>obuf_used=20</TD>
-</TR><TR ALIGN='LEFT'>    <TD>ramd32_functional_category=Distributed Memory</TD>
+    <TD>obuf_used=24</TD>
+</TR><TR ALIGN='LEFT'>    <TD>obuft_functional_category=IO</TD>
+    <TD>obuft_used=8</TD>
+    <TD>ramd32_functional_category=Distributed Memory</TD>
     <TD>ramd32_used=96</TD>
-    <TD>rams32_functional_category=Distributed Memory</TD>
+</TR><TR ALIGN='LEFT'>    <TD>rams32_functional_category=Distributed Memory</TD>
     <TD>rams32_used=96</TD>
 </TR>   </TABLE>
    </TD></TR>
@@ -415,7 +427,7 @@
     <TD>lut_as_distributed_ram_used=128</TD>
     <TD>lut_as_logic_available=63400</TD>
     <TD>lut_as_logic_fixed=0</TD>
-</TR><TR ALIGN='LEFT'>    <TD>lut_as_logic_used=438</TD>
+</TR><TR ALIGN='LEFT'>    <TD>lut_as_logic_used=436</TD>
     <TD>lut_as_logic_util_percentage=0.69</TD>
     <TD>lut_as_memory_available=19000</TD>
     <TD>lut_as_memory_fixed=0</TD>
@@ -433,7 +445,7 @@
     <TD>register_as_latch_util_percentage=0.05</TD>
 </TR><TR ALIGN='LEFT'>    <TD>slice_luts_available=63400</TD>
     <TD>slice_luts_fixed=0</TD>
-    <TD>slice_luts_used=566</TD>
+    <TD>slice_luts_used=564</TD>
     <TD>slice_luts_util_percentage=0.89</TD>
 </TR><TR ALIGN='LEFT'>    <TD>slice_registers_available=126800</TD>
     <TD>slice_registers_fixed=0</TD>
@@ -445,7 +457,7 @@
     <TD>lut_as_distributed_ram_used=128</TD>
 </TR><TR ALIGN='LEFT'>    <TD>lut_as_logic_available=63400</TD>
     <TD>lut_as_logic_fixed=0</TD>
-    <TD>lut_as_logic_used=438</TD>
+    <TD>lut_as_logic_used=436</TD>
     <TD>lut_as_logic_util_percentage=0.69</TD>
 </TR><TR ALIGN='LEFT'>    <TD>lut_as_memory_available=19000</TD>
     <TD>lut_as_memory_fixed=0</TD>
@@ -454,21 +466,21 @@
 </TR><TR ALIGN='LEFT'>    <TD>lut_as_shift_register_fixed=0</TD>
     <TD>lut_as_shift_register_used=0</TD>
     <TD>lut_ff_pairs_with_one_unused_flip_flop_fixed=0</TD>
-    <TD>lut_ff_pairs_with_one_unused_flip_flop_used=19</TD>
-</TR><TR ALIGN='LEFT'>    <TD>lut_ff_pairs_with_one_unused_lut_output_fixed=19</TD>
-    <TD>lut_ff_pairs_with_one_unused_lut_output_used=12</TD>
+    <TD>lut_ff_pairs_with_one_unused_flip_flop_used=12</TD>
+</TR><TR ALIGN='LEFT'>    <TD>lut_ff_pairs_with_one_unused_lut_output_fixed=12</TD>
+    <TD>lut_ff_pairs_with_one_unused_lut_output_used=8</TD>
     <TD>lut_flip_flop_pairs_available=63400</TD>
     <TD>lut_flip_flop_pairs_fixed=0</TD>
-</TR><TR ALIGN='LEFT'>    <TD>lut_flip_flop_pairs_used=20</TD>
-    <TD>lut_flip_flop_pairs_util_percentage=0.03</TD>
+</TR><TR ALIGN='LEFT'>    <TD>lut_flip_flop_pairs_used=13</TD>
+    <TD>lut_flip_flop_pairs_util_percentage=0.02</TD>
     <TD>slice_available=15850</TD>
     <TD>slice_fixed=0</TD>
-</TR><TR ALIGN='LEFT'>    <TD>slice_used=163</TD>
-    <TD>slice_util_percentage=1.03</TD>
+</TR><TR ALIGN='LEFT'>    <TD>slice_used=172</TD>
+    <TD>slice_util_percentage=1.09</TD>
     <TD>slicel_fixed=0</TD>
-    <TD>slicel_used=91</TD>
+    <TD>slicel_used=99</TD>
 </TR><TR ALIGN='LEFT'>    <TD>slicem_fixed=0</TD>
-    <TD>slicem_used=72</TD>
+    <TD>slicem_used=73</TD>
     <TD>unique_control_sets_used=7</TD>
     <TD>using_o5_and_o6_fixed=7</TD>
 </TR><TR ALIGN='LEFT'>    <TD>using_o5_and_o6_used=64</TD>
@@ -525,7 +537,7 @@
    <TR><TD>
    <TABLE BORDER='1' CELLSPACING='0' WIDTH='100%'>
     <TR ALIGN='CENTER' BGCOLOR='#DBE5F1'><TD COLSPAN='4'><B>usage</B></TD></TR>
-<TR ALIGN='LEFT'>    <TD>actual_expansions=1082262</TD>
+<TR ALIGN='LEFT'>    <TD>actual_expansions=1100261</TD>
     <TD>bogomips=0</TD>
     <TD>bram18=0</TD>
     <TD>bram36=0</TD>
@@ -534,15 +546,15 @@
     <TD>ctrls=7</TD>
     <TD>dsp=3</TD>
 </TR><TR ALIGN='LEFT'>    <TD>effort=2</TD>
-    <TD>estimated_expansions=717876</TD>
+    <TD>estimated_expansions=704412</TD>
     <TD>ff=99</TD>
     <TD>global_clocks=3</TD>
 </TR><TR ALIGN='LEFT'>    <TD>high_fanout_nets=0</TD>
-    <TD>iob=22</TD>
+    <TD>iob=38</TD>
     <TD>lut=574</TD>
-    <TD>movable_instances=843</TD>
-</TR><TR ALIGN='LEFT'>    <TD>nets=1046</TD>
-    <TD>pins=7284</TD>
+    <TD>movable_instances=860</TD>
+</TR><TR ALIGN='LEFT'>    <TD>nets=1067</TD>
+    <TD>pins=7325</TD>
     <TD>pll=0</TD>
     <TD>router_runtime=0.000000</TD>
 </TR><TR ALIGN='LEFT'>    <TD>router_timing_driven=1</TD>
@@ -597,8 +609,8 @@
     <TR ALIGN='CENTER' BGCOLOR='#DBE5F1'><TD COLSPAN='4'><B>usage</B></TD></TR>
 <TR ALIGN='LEFT'>    <TD>elapsed=00:00:37s</TD>
     <TD>hls_ip=0</TD>
-    <TD>memory_gain=592.855MB</TD>
-    <TD>memory_peak=838.668MB</TD>
+    <TD>memory_gain=593.438MB</TD>
+    <TD>memory_peak=839.211MB</TD>
 </TR>   </TABLE>
    </TD></TR>
   </TABLE><BR>
