--- a/CU_DPU_test2_io/CU_DPU.runs/impl_1/usage_statistics_webtalk.html
+++ b/CU_DPU_test2_io/CU_DPU.runs/impl_1/usage_statistics_webtalk.html
@@ -4,11 +4,11 @@
   <TR ALIGN='CENTER' BGCOLOR='#A7BFDE'><TD COLSPAN='4'><B>software_version_and_target_device</B></TD></TR>
 <TR ALIGN='LEFT'>  <TD BGCOLOR='#DBE5F1'><B>beta</B></TD><TD>FALSE</TD>
   <TD BGCOLOR='#DBE5F1'><B>build_version</B></TD><TD>2288692</TD>
-</TR><TR ALIGN='LEFT'>  <TD BGCOLOR='#DBE5F1'><B>date_generated</B></TD><TD>Tue May 14 02:11:34 2019</TD>
+</TR><TR ALIGN='LEFT'>  <TD BGCOLOR='#DBE5F1'><B>date_generated</B></TD><TD>Tue May 14 04:01:02 2019</TD>
   <TD BGCOLOR='#DBE5F1'><B>os_platform</B></TD><TD>WIN64</TD>
 </TR><TR ALIGN='LEFT'>  <TD BGCOLOR='#DBE5F1'><B>product_version</B></TD><TD>Vivado v2018.2.1 (64-bit)</TD>
   <TD BGCOLOR='#DBE5F1'><B>project_id</B></TD><TD>22f1f50bc018488896c371ccba462f89</TD>
-</TR><TR ALIGN='LEFT'>  <TD BGCOLOR='#DBE5F1'><B>project_iteration</B></TD><TD>4</TD>
+</TR><TR ALIGN='LEFT'>  <TD BGCOLOR='#DBE5F1'><B>project_iteration</B></TD><TD>7</TD>
   <TD BGCOLOR='#DBE5F1'><B>random_id</B></TD><TD>1f50d6dc19e85a2ea68a17a3db02a7a7</TD>
 </TR><TR ALIGN='LEFT'>  <TD BGCOLOR='#DBE5F1'><B>registration_id</B></TD><TD>1f50d6dc19e85a2ea68a17a3db02a7a7</TD>
   <TD BGCOLOR='#DBE5F1'><B>route_design</B></TD><TD>TRUE</TD>
@@ -34,21 +34,21 @@
 <TR ALIGN='LEFT'>   <TD>addsrcwizard_specify_hdl_netlist_block_design=1</TD>
    <TD>addsrcwizard_specify_simulation_specific_hdl_files=2</TD>
    <TD>basedialog_cancel=11</TD>
-   <TD>basedialog_ok=245</TD>
+   <TD>basedialog_ok=274</TD>
 </TR><TR ALIGN='LEFT'>   <TD>basedialog_yes=1</TD>
    <TD>baseworkspace_float=9</TD>
    <TD>boardchooser_board_table=2</TD>
    <TD>cmdmsgdialog_messages=2</TD>
-</TR><TR ALIGN='LEFT'>   <TD>cmdmsgdialog_ok=15</TD>
+</TR><TR ALIGN='LEFT'>   <TD>cmdmsgdialog_ok=16</TD>
    <TD>cmdmsgdialog_open_messages_view=23</TD>
    <TD>constraintschooserpanel_add_files=1</TD>
    <TD>createsrcfiledialog_file_name=30</TD>
 </TR><TR ALIGN='LEFT'>   <TD>expreporttreepanel_exp_report_tree_table=2</TD>
-   <TD>filesetpanel_file_set_panel_tree=530</TD>
+   <TD>filesetpanel_file_set_panel_tree=556</TD>
    <TD>filesetpanel_messages=1</TD>
    <TD>findinfilesview_root=4</TD>
 </TR><TR ALIGN='LEFT'>   <TD>floatingtopdialog_ignore_and_continue_with_invalid_top=1</TD>
-   <TD>flownavigatortreepanel_flow_navigator_tree=222</TD>
+   <TD>flownavigatortreepanel_flow_navigator_tree=239</TD>
    <TD>gettingstartedview_create_new_project=1</TD>
    <TD>graphicalview_zoom_in=30</TD>
 </TR><TR ALIGN='LEFT'>   <TD>graphicalview_zoom_out=132</TD>
@@ -70,7 +70,7 @@
 </TR><TR ALIGN='LEFT'>   <TD>mainmenumgr_window=6</TD>
    <TD>mainwinmenumgr_layout=8</TD>
    <TD>msgtreepanel_message_severity=1</TD>
-   <TD>msgtreepanel_message_view_tree=63</TD>
+   <TD>msgtreepanel_message_view_tree=69</TD>
 </TR><TR ALIGN='LEFT'>   <TD>msgview_error_messages=2</TD>
    <TD>msgview_information_messages=3</TD>
    <TD>msgview_status_messages=2</TD>
@@ -80,67 +80,69 @@
    <TD>openfileaction_open_directory=2</TD>
    <TD>pacodeeditor_find_usages=2</TD>
 </TR><TR ALIGN='LEFT'>   <TD>pacodeeditor_goto_definition=2</TD>
-   <TD>pacommandnames_auto_connect_target=3</TD>
+   <TD>pacommandnames_auto_connect_target=5</TD>
    <TD>pacommandnames_auto_update_hier=9</TD>
-   <TD>pacommandnames_run_bitgen=6</TD>
+   <TD>pacommandnames_run_bitgen=9</TD>
 </TR><TR ALIGN='LEFT'>   <TD>pacommandnames_set_as_top=9</TD>
    <TD>pacommandnames_simulation_live_restart=71</TD>
    <TD>pacommandnames_simulation_live_run=776</TD>
    <TD>pacommandnames_simulation_live_run_all=5</TD>
 </TR><TR ALIGN='LEFT'>   <TD>pacommandnames_simulation_live_step=4</TD>
    <TD>pacommandnames_simulation_run_behavioral=53</TD>
-   <TD>paviews_code=94</TD>
-   <TD>paviews_project_summary=22</TD>
+   <TD>paviews_code=97</TD>
+   <TD>paviews_project_summary=24</TD>
 </TR><TR ALIGN='LEFT'>   <TD>paviews_schematic=15</TD>
    <TD>programdebugtab_program_device=1</TD>
-   <TD>programfpgadialog_program=3</TD>
-   <TD>projectnamechooser_choose_project_location=1</TD>
-</TR><TR ALIGN='LEFT'>   <TD>projectnamechooser_project_name=1</TD>
+   <TD>programfpgadialog_program=5</TD>
+   <TD>progressdialog_cancel=1</TD>
+</TR><TR ALIGN='LEFT'>   <TD>projectnamechooser_choose_project_location=1</TD>
+   <TD>projectnamechooser_project_name=1</TD>
    <TD>projecttab_reload=11</TD>
    <TD>rdicommands_delete=15</TD>
-   <TD>rdicommands_properties=1</TD>
-</TR><TR ALIGN='LEFT'>   <TD>rdicommands_waveform_save_configuration=1</TD>
+</TR><TR ALIGN='LEFT'>   <TD>rdicommands_properties=1</TD>
+   <TD>rdicommands_waveform_save_configuration=1</TD>
    <TD>rdiviews_waveform_viewer=252</TD>
    <TD>removesourcesdialog_also_delete=9</TD>
-   <TD>saveprojectutils_save=3</TD>
-</TR><TR ALIGN='LEFT'>   <TD>schmenuandmouse_expand_cone=1</TD>
+</TR><TR ALIGN='LEFT'>   <TD>saveprojectutils_save=3</TD>
+   <TD>schmenuandmouse_expand_cone=1</TD>
    <TD>searchcommandcomponent_quick_access=3</TD>
    <TD>simulationforcesettingsdialog_force_value=15</TD>
-   <TD>simulationframespanel_simulation_frame_table=1</TD>
-</TR><TR ALIGN='LEFT'>   <TD>simulationliverunforcomp_specify_time_and_units=11</TD>
+</TR><TR ALIGN='LEFT'>   <TD>simulationframespanel_simulation_frame_table=1</TD>
+   <TD>simulationliverunforcomp_specify_time_and_units=11</TD>
    <TD>simulationlocalspanel_simulate_locals_table=1</TD>
    <TD>simulationobjectspanel_simulation_objects_tree_table=167</TD>
-   <TD>simulationscopespanel_simulate_scope_table=366</TD>
-</TR><TR ALIGN='LEFT'>   <TD>simulationstackspanel_simulation_stack_table=4</TD>
+</TR><TR ALIGN='LEFT'>   <TD>simulationscopespanel_simulate_scope_table=366</TD>
+   <TD>simulationstackspanel_simulation_stack_table=4</TD>
    <TD>srcchooserpanel_add_hdl_and_netlist_files_to_your_project=15</TD>
    <TD>srcchooserpanel_create_file=29</TD>
-   <TD>srcmenu_ip_hierarchy=9</TD>
-</TR><TR ALIGN='LEFT'>   <TD>syntheticagettingstartedview_recent_projects=1</TD>
+</TR><TR ALIGN='LEFT'>   <TD>srcmenu_ip_hierarchy=9</TD>
+   <TD>syntheticagettingstartedview_recent_projects=1</TD>
    <TD>syntheticastatemonitor_cancel=1</TD>
-   <TD>taskbanner_close=52</TD>
-   <TD>tclconsoleview_tcl_console_code_editor=43</TD>
-</TR><TR ALIGN='LEFT'>   <TD>waveformnametree_waveform_name_tree=31</TD>
+   <TD>taskbanner_close=56</TD>
+</TR><TR ALIGN='LEFT'>   <TD>tclconsoleview_tcl_console_code_editor=43</TD>
+   <TD>touchpointsurveydialog_no=1</TD>
+   <TD>waveformnametree_waveform_name_tree=31</TD>
    <TD>waveformview_goto_last_time=4</TD>
-   <TD>waveformview_goto_time_0=2</TD>
+</TR><TR ALIGN='LEFT'>   <TD>waveformview_goto_time_0=2</TD>
 </TR>  </TABLE>
   <TABLE BORDER='1' CELLSPACING='0' WIDTH='100%'>
    <TR ALIGN='CENTER' BGCOLOR='#DBE5F1'><TD COLSPAN='4'><B>java_command_handlers</B></TD></TR>
 <TR ALIGN='LEFT'>   <TD>addsources=41</TD>
-   <TD>autoconnecttarget=3</TD>
-   <TD>closeproject=2</TD>
+   <TD>autoconnecttarget=5</TD>
+   <TD>closeproject=3</TD>
    <TD>editdelete=15</TD>
-</TR><TR ALIGN='LEFT'>   <TD>launchprogramfpga=3</TD>
+</TR><TR ALIGN='LEFT'>   <TD>launchprogramfpga=5</TD>
    <TD>newproject=1</TD>
-   <TD>openhardwaremanager=5</TD>
-   <TD>openrecenttarget=3</TD>
-</TR><TR ALIGN='LEFT'>   <TD>programdevice=2</TD>
-   <TD>runbitgen=6</TD>
-   <TD>runimplementation=7</TD>
+   <TD>openhardwaremanager=9</TD>
+   <TD>openrecenttarget=5</TD>
+</TR><TR ALIGN='LEFT'>   <TD>programdevice=4</TD>
+   <TD>runbitgen=9</TD>
+   <TD>runimplementation=10</TD>
    <TD>runschematic=6</TD>
-</TR><TR ALIGN='LEFT'>   <TD>runsynthesis=45</TD>
+</TR><TR ALIGN='LEFT'>   <TD>runsynthesis=52</TD>
    <TD>savefileproxyhandler=3</TD>
    <TD>settopnode=9</TD>
-   <TD>showview=27</TD>
+   <TD>showview=30</TD>
 </TR><TR ALIGN='LEFT'>   <TD>simulationrestart=70</TD>
    <TD>simulationrun=53</TD>
    <TD>simulationrunall=5</TD>
@@ -149,12 +151,12 @@
    <TD>toolssettings=1</TD>
    <TD>toolstemplates=1</TD>
    <TD>viewlayoutcmd=2</TD>
-</TR><TR ALIGN='LEFT'>   <TD>viewtaskrtlanalysis=21</TD>
+</TR><TR ALIGN='LEFT'>   <TD>viewtaskrtlanalysis=22</TD>
    <TD>waveformsaveconfiguration=6</TD>
 </TR>  </TABLE>
 </TR><TR ALIGN='LEFT'>  <TABLE BORDER='1' CELLSPACING='0' WIDTH='100%'>
    <TR ALIGN='CENTER' BGCOLOR='#DBE5F1'><TD COLSPAN='4'><B>other_data</B></TD></TR>
-<TR ALIGN='LEFT'>   <TD>guimode=21</TD>
+<TR ALIGN='LEFT'>   <TD>guimode=23</TD>
 </TR>  </TABLE>
   <TABLE BORDER='1' CELLSPACING='0' WIDTH='100%'>
    <TR ALIGN='CENTER' BGCOLOR='#DBE5F1'><TD COLSPAN='4'><B>project_data</B></TD></TR>
@@ -194,50 +196,50 @@
    <TABLE BORDER='1' CELLSPACING='0' WIDTH='100%'>
     <TR ALIGN='CENTER' BGCOLOR='#DBE5F1'><TD COLSPAN='4'><B>post_unisim_transformation</B></TD></TR>
 <TR ALIGN='LEFT'>    <TD>bufg=4</TD>
-    <TD>carry4=39</TD>
+    <TD>carry4=47</TD>
     <TD>dsp48e1=3</TD>
-    <TD>fdce=85</TD>
+    <TD>fdce=91</TD>
 </TR><TR ALIGN='LEFT'>    <TD>fdpe=2</TD>
-    <TD>fdre=50</TD>
-    <TD>gnd=11</TD>
+    <TD>fdre=94</TD>
+    <TD>gnd=15</TD>
     <TD>ibuf=9</TD>
 </TR><TR ALIGN='LEFT'>    <TD>ldce=64</TD>
-    <TD>lut1=5</TD>
-    <TD>lut2=94</TD>
-    <TD>lut3=56</TD>
-</TR><TR ALIGN='LEFT'>    <TD>lut4=74</TD>
-    <TD>lut5=73</TD>
-    <TD>lut6=268</TD>
+    <TD>lut1=7</TD>
+    <TD>lut2=95</TD>
+    <TD>lut3=60</TD>
+</TR><TR ALIGN='LEFT'>    <TD>lut4=81</TD>
+    <TD>lut5=76</TD>
+    <TD>lut6=275</TD>
     <TD>obuf=30</TD>
 </TR><TR ALIGN='LEFT'>    <TD>obuft=5</TD>
     <TD>ramd32=96</TD>
     <TD>rams32=96</TD>
-    <TD>vcc=15</TD>
+    <TD>vcc=19</TD>
 </TR>   </TABLE>
    </TD></TR>
    <TR><TD>
    <TABLE BORDER='1' CELLSPACING='0' WIDTH='100%'>
     <TR ALIGN='CENTER' BGCOLOR='#DBE5F1'><TD COLSPAN='4'><B>pre_unisim_transformation</B></TD></TR>
 <TR ALIGN='LEFT'>    <TD>bufg=4</TD>
-    <TD>carry4=39</TD>
+    <TD>carry4=47</TD>
     <TD>dsp48e1=3</TD>
-    <TD>fdce=85</TD>
+    <TD>fdce=91</TD>
 </TR><TR ALIGN='LEFT'>    <TD>fdpe=2</TD>
-    <TD>fdre=50</TD>
-    <TD>gnd=11</TD>
+    <TD>fdre=94</TD>
+    <TD>gnd=15</TD>
     <TD>ibuf=9</TD>
 </TR><TR ALIGN='LEFT'>    <TD>ldce=64</TD>
-    <TD>lut1=5</TD>
-    <TD>lut2=94</TD>
-    <TD>lut3=56</TD>
-</TR><TR ALIGN='LEFT'>    <TD>lut4=74</TD>
-    <TD>lut5=73</TD>
-    <TD>lut6=268</TD>
+    <TD>lut1=7</TD>
+    <TD>lut2=95</TD>
+    <TD>lut3=60</TD>
+</TR><TR ALIGN='LEFT'>    <TD>lut4=81</TD>
+    <TD>lut5=76</TD>
+    <TD>lut6=275</TD>
     <TD>obuf=30</TD>
 </TR><TR ALIGN='LEFT'>    <TD>obuft=5</TD>
     <TD>ram32m=16</TD>
     <TD>ram32x1s=64</TD>
-    <TD>vcc=15</TD>
+    <TD>vcc=19</TD>
 </TR>   </TABLE>
    </TD></TR>
   </TABLE><BR>
@@ -399,15 +401,15 @@
 </TR><TR ALIGN='LEFT'>    <TD>lut1_functional_category=LUT</TD>
     <TD>lut1_used=4</TD>
     <TD>lut2_functional_category=LUT</TD>
-    <TD>lut2_used=93</TD>
+    <TD>lut2_used=92</TD>
 </TR><TR ALIGN='LEFT'>    <TD>lut3_functional_category=LUT</TD>
     <TD>lut3_used=54</TD>
     <TD>lut4_functional_category=LUT</TD>
-    <TD>lut4_used=70</TD>
+    <TD>lut4_used=69</TD>
 </TR><TR ALIGN='LEFT'>    <TD>lut5_functional_category=LUT</TD>
-    <TD>lut5_used=72</TD>
+    <TD>lut5_used=73</TD>
     <TD>lut6_functional_category=LUT</TD>
-    <TD>lut6_used=263</TD>
+    <TD>lut6_used=260</TD>
 </TR><TR ALIGN='LEFT'>    <TD>obuf_functional_category=IO</TD>
     <TD>obuf_used=30</TD>
     <TD>obuft_functional_category=IO</TD>
@@ -433,8 +435,8 @@
     <TD>lut_as_distributed_ram_used=128</TD>
     <TD>lut_as_logic_available=63400</TD>
     <TD>lut_as_logic_fixed=0</TD>
-</TR><TR ALIGN='LEFT'>    <TD>lut_as_logic_used=506</TD>
-    <TD>lut_as_logic_util_percentage=0.80</TD>
+</TR><TR ALIGN='LEFT'>    <TD>lut_as_logic_used=500</TD>
+    <TD>lut_as_logic_util_percentage=0.79</TD>
     <TD>lut_as_memory_available=19000</TD>
     <TD>lut_as_memory_fixed=0</TD>
 </TR><TR ALIGN='LEFT'>    <TD>lut_as_memory_used=128</TD>
@@ -451,8 +453,8 @@
     <TD>register_as_latch_util_percentage=0.05</TD>
 </TR><TR ALIGN='LEFT'>    <TD>slice_luts_available=63400</TD>
     <TD>slice_luts_fixed=0</TD>
-    <TD>slice_luts_used=634</TD>
-    <TD>slice_luts_util_percentage=1.00</TD>
+    <TD>slice_luts_used=628</TD>
+    <TD>slice_luts_util_percentage=0.99</TD>
 </TR><TR ALIGN='LEFT'>    <TD>slice_registers_available=126800</TD>
     <TD>slice_registers_fixed=0</TD>
     <TD>slice_registers_used=176</TD>
@@ -463,8 +465,8 @@
     <TD>lut_as_distributed_ram_used=128</TD>
 </TR><TR ALIGN='LEFT'>    <TD>lut_as_logic_available=63400</TD>
     <TD>lut_as_logic_fixed=0</TD>
-    <TD>lut_as_logic_used=506</TD>
-    <TD>lut_as_logic_util_percentage=0.80</TD>
+    <TD>lut_as_logic_used=500</TD>
+    <TD>lut_as_logic_util_percentage=0.79</TD>
 </TR><TR ALIGN='LEFT'>    <TD>lut_as_memory_available=19000</TD>
     <TD>lut_as_memory_fixed=0</TD>
     <TD>lut_as_memory_used=128</TD>
@@ -472,21 +474,21 @@
 </TR><TR ALIGN='LEFT'>    <TD>lut_as_shift_register_fixed=0</TD>
     <TD>lut_as_shift_register_used=0</TD>
     <TD>lut_ff_pairs_with_one_unused_flip_flop_fixed=0</TD>
-    <TD>lut_ff_pairs_with_one_unused_flip_flop_used=71</TD>
-</TR><TR ALIGN='LEFT'>    <TD>lut_ff_pairs_with_one_unused_lut_output_fixed=71</TD>
-    <TD>lut_ff_pairs_with_one_unused_lut_output_used=62</TD>
+    <TD>lut_ff_pairs_with_one_unused_flip_flop_used=68</TD>
+</TR><TR ALIGN='LEFT'>    <TD>lut_ff_pairs_with_one_unused_lut_output_fixed=68</TD>
+    <TD>lut_ff_pairs_with_one_unused_lut_output_used=61</TD>
     <TD>lut_flip_flop_pairs_available=63400</TD>
     <TD>lut_flip_flop_pairs_fixed=0</TD>
-</TR><TR ALIGN='LEFT'>    <TD>lut_flip_flop_pairs_used=77</TD>
+</TR><TR ALIGN='LEFT'>    <TD>lut_flip_flop_pairs_used=73</TD>
     <TD>lut_flip_flop_pairs_util_percentage=0.12</TD>
     <TD>slice_available=15850</TD>
     <TD>slice_fixed=0</TD>
-</TR><TR ALIGN='LEFT'>    <TD>slice_used=193</TD>
+</TR><TR ALIGN='LEFT'>    <TD>slice_used=194</TD>
     <TD>slice_util_percentage=1.22</TD>
     <TD>slicel_fixed=0</TD>
-    <TD>slicel_used=121</TD>
+    <TD>slicel_used=117</TD>
 </TR><TR ALIGN='LEFT'>    <TD>slicem_fixed=0</TD>
-    <TD>slicem_used=72</TD>
+    <TD>slicem_used=77</TD>
     <TD>unique_control_sets_used=14</TD>
     <TD>using_o5_and_o6_fixed=14</TD>
 </TR><TR ALIGN='LEFT'>    <TD>using_o5_and_o6_used=64</TD>
@@ -543,7 +545,7 @@
    <TR><TD>
    <TABLE BORDER='1' CELLSPACING='0' WIDTH='100%'>
     <TR ALIGN='CENTER' BGCOLOR='#DBE5F1'><TD COLSPAN='4'><B>usage</B></TD></TR>
-<TR ALIGN='LEFT'>    <TD>actual_expansions=1148867</TD>
+<TR ALIGN='LEFT'>    <TD>actual_expansions=1424176</TD>
     <TD>bogomips=0</TD>
     <TD>bram18=0</TD>
     <TD>bram36=0</TD>
@@ -552,15 +554,15 @@
     <TD>ctrls=14</TD>
     <TD>dsp=3</TD>
 </TR><TR ALIGN='LEFT'>    <TD>effort=2</TD>
-    <TD>estimated_expansions=793050</TD>
+    <TD>estimated_expansions=835482</TD>
     <TD>ff=176</TD>
     <TD>global_clocks=4</TD>
 </TR><TR ALIGN='LEFT'>    <TD>high_fanout_nets=0</TD>
     <TD>iob=44</TD>
-    <TD>lut=642</TD>
-    <TD>movable_instances=1032</TD>
-</TR><TR ALIGN='LEFT'>    <TD>nets=1265</TD>
-    <TD>pins=8218</TD>
+    <TD>lut=638</TD>
+    <TD>movable_instances=1028</TD>
+</TR><TR ALIGN='LEFT'>    <TD>nets=1261</TD>
+    <TD>pins=8195</TD>
     <TD>pll=0</TD>
     <TD>router_runtime=0.000000</TD>
 </TR><TR ALIGN='LEFT'>    <TD>router_timing_driven=1</TD>
@@ -613,10 +615,10 @@
    <TR><TD>
    <TABLE BORDER='1' CELLSPACING='0' WIDTH='100%'>
     <TR ALIGN='CENTER' BGCOLOR='#DBE5F1'><TD COLSPAN='4'><B>usage</B></TD></TR>
-<TR ALIGN='LEFT'>    <TD>elapsed=00:00:41s</TD>
+<TR ALIGN='LEFT'>    <TD>elapsed=00:00:39s</TD>
     <TD>hls_ip=0</TD>
-    <TD>memory_gain=605.895MB</TD>
-    <TD>memory_peak=852.582MB</TD>
+    <TD>memory_gain=606.840MB</TD>
+    <TD>memory_peak=853.191MB</TD>
 </TR>   </TABLE>
    </TD></TR>
   </TABLE><BR>
